--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&family=Markazi+Text:wght@400;500&display=swap");
 
-body{
+:root {
+  --main-font: "Markazi Text", serif;
+  --font: "Karla", sans-serif;
+  --primary-color: #495e57;
+  --primary-color-2: #f4ce14;
+}
+body {
   width: 100%;
   margin: 0 auto;
 }
 
-li{
+li {
   list-style: none;
 }
-a{
+a {
   text-decoration: none;
 }
 
-nav{
+nav {
   z-index: 10001;
 }
-
 
 .navbar {
   padding: 10px 13%;
@@ -28,13 +34,12 @@ nav ul li {
   padding: 1em;
 }
 
-nav ul li a{
+nav ul li a {
   color: #000;
 }
 
-nav ul li a:hover{
-  text-decoration: underline solid #495E57;
-  
+nav ul li a:hover {
+  text-decoration: underline solid #495e57;
 }
 
 .menu-icon {
@@ -61,13 +66,12 @@ nav ul li a:hover{
   top: 40px;
   right: 0;
   width: 100%;
-  background-color: #495E57;
+  background-color: #495e57;
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 0.3s ease-in-out;
 }
-
 
 /* header section */
 
@@ -77,22 +81,27 @@ nav ul li a:hover{
 }
 
 .header section {
-color: #EDEFEE;
-padding: 10px 13%;
-position: relative;
+  color: #edefee;
+  padding: 10px 13%;
+  position: relative;
 }
 
-
 h2 {
-  color: #F4CE14;
-  font-size: 40px;
+  font-family: var(--main-font);
+  font-size: 64px;
+  font-weight: 600;
+  color: var(--primary-color-2);
+  margin-bottom: 0;
 }
 
 h3 {
-  font-size: 25px;
+  font-family: var(--main-font);
+  font-size: 40px;
+  margin: 0;
 }
 
 .banner p {
+  font-family: var(--font);
   font-size: 20px;
   max-width: 520px;
   line-height: 1.5;
@@ -100,7 +109,7 @@ h3 {
 }
 
 button {
-  background-color: #F4CE14;
+  background-color: #f4ce14;
   color: black;
   padding: 14px 18px;
   border: none;
@@ -111,7 +120,7 @@ button {
   cursor: pointer;
 }
 
-.banner-img{
+.banner-img {
   position: absolute;
   right: 13%;
   top: 15%;
@@ -124,21 +133,25 @@ button {
   border-radius: 20px;
 }
 
-
-form, .comfirm{
+form,
+.comfirm {
   padding: 10px 13%;
 }
 
-.formField{
+.formField {
   padding: 50px 20px;
 }
 
-input, label{
+input,
+label {
   display: inline-block;
   margin-right: 20px;
   margin-bottom: 20px;
 }
-#book-date, #book-time, #book-guests, #book-occasion{
+#book-date,
+#book-time,
+#book-guests,
+#book-occasion {
   background: #bdbdbd43;
   padding: 8px 24px;
   border: none;
@@ -146,39 +159,37 @@ input, label{
   border-radius: 2px;
 }
 
-.btnReceive input{
+.btnReceive input {
   padding: 12px 16px;
   margin-top: 20px;
   background: #495e57;
   color: #fff;
   border: none;
   border-radius: 4px;
-
 }
 
-.comfirm span{
+.comfirm span {
   color: blue;
 }
 
-
 /* menu items */
 
-.menu-container{
+.menu-container {
   margin: 110px auto;
   padding: 10px 13%;
 }
 
-.menu-container h2{
+.menu-container h2 {
   color: #000;
 }
 
-.menu-header{
+.menu-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
-.cards{
+.cards {
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
@@ -187,67 +198,65 @@ input, label{
   gap: 2rem 1rem;
 }
 
-.menu-items{
+.menu-items {
   /* height: 400px; */
   width: 350px;
-  background: #a9c8be;
+  background: lightgray;
   border-radius: 8px;
 }
 
-.menu-container img{
+.menu-container img {
   width: 100%;
   height: 233px;
   border-radius: 8px;
 }
 
-.menu-content{
-  padding: 5px 15px;
+.menu-content {
+  padding: 5px 27px;
 }
 
-
-.menu-content .heading{
+.menu-content .heading {
   display: flex;
   justify-content: space-between;
 }
 
-.orderbtn{
+.orderbtn {
   padding: 5px 12px;
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 600;
 }
 
-footer section{
+footer section {
   padding: 10px 13%;
   display: flex;
   justify-content: space-between;
   align-items: start;
 }
 
-.company-info img{
+.company-info img {
   margin-top: 12px;
   cursor: pointer;
   width: 200px;
 }
 
-.company-info p{
+.company-info p {
   width: 320px;
 }
 
-footer h3{
+footer h3 {
   font-size: 18px;
 }
 
-footer ul{
+footer ul {
   padding: 0;
 }
 
-footer ul li{
+footer ul li {
   padding: 8px 0;
 }
 
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .menu-icon {
     display: block;
   }
@@ -263,51 +272,52 @@ footer ul li{
     padding: 20px 0;
   }
 
-  .navbar{
-    background:#fff;
+  .navbar {
+    background: #fff;
     padding: 10px 8%;
   }
 
-  nav ul li a{
+  nav ul li a {
     color: #fff;
   }
 
-  .bar{
+  .bar {
     background: #333333;
   }
 
-  .banner-img{
+  .banner-img {
     display: none;
   }
 
-  form, .comfirm{
+  form,
+  .comfirm {
     padding: 10px 8%;
   }
 
-
-  .header section, .menu-container{
+  .header section,
+  .menu-container {
     padding: 10px 8%;
   }
-  .menu-container{
+  .menu-container {
     margin: 20px 0;
   }
-  .menu-header{
+  .menu-header {
     justify-content: flex-start;
   }
 
-  .menu-items{
+  .menu-items {
     width: 100%;
   }
 
-  footer section{
+  footer section {
     padding: 10px 8%;
     flex-direction: column;
   }
-  .company-info p{
+  .company-info p {
     width: 100%;
   }
 }
 
-.hidden{
+.hidden {
   display: none;
 }
